add passphrase for uploading data
